Change the structure of Project element

--- a/src/assets/scss/plugins/_plugin-react-slick.scss
+++ b/src/assets/scss/plugins/_plugin-react-slick.scss
@@ -167,7 +167,7 @@ button.slick-arrow.slick-next {
     font-variant: normal;
     text-rendering: auto;
     line-height: 1;
-    color: white;
+    color: black;
     font-size: 30px;
     width: 100%;
   }
@@ -185,7 +185,7 @@ button.slick-arrow.slick-next {
     font-variant: normal;
     text-rendering: auto;
     line-height: 1;
-    color: #fff;
+    color: black;
     font-size: 30px;
     width: 100%;
   }
